--- a/CSS/Home.css
+++ b/CSS/Home.css
@@ -1,5 +1,5 @@
 .navbar {
-    background-color: #74868C;
+    background-color: #556266;
     overflow: hidden;
 }
 .navbar a {
@@ -82,7 +82,7 @@ padding-bottom: 30px;
 }
 
 .addtocart {
-    background-color: #74868C;
+    background-color: #556266;
     color:white;
     padding:5px;
     width:80px;
@@ -92,7 +92,7 @@ padding-bottom: 30px;
 
 
 .category {
-    background-color: #74868C;
+    background-color: #556266;
     width:150px;
     padding:10px;
     display:flex;
@@ -105,7 +105,7 @@ padding-bottom: 30px;
 .category-container {
     display:flex;
     justify-content: space-evenly;
-    width:100vw;
+    /* width:100vw; */
     padding-top: 100px;
 }
 .link {
@@ -116,7 +116,7 @@ padding-bottom: 30px;
 footer {
     padding:40px;
     padding-bottom: 60px;
-    background-color:#74868C;
+    background-color:#556266;
     color: #FFF;
 }
 
