--- a/CSS/checkout.css
+++ b/CSS/checkout.css
@@ -1,5 +1,5 @@
 .navbar {
-    background-color: #74868C;
+    background-color: #556266;
     overflow: hidden;
 }
 .navbar a {
@@ -21,32 +21,24 @@
     background-color: rgb(247, 247, 248);
 }
 
+main {
+    max-width: 600px;
+    margin: 0 auto;
+}
+
 .cart {
     display:flex;
     justify-content: space-between;
-    padding-bottom: 30px;;
-    background-color: #74868C;
+    background-color: #556266;
 }
 @media(max-width: 400px) {
     .image {
         max-width: 140px;
         max-height: 140px;
     }
-    .text {
-        position: absolute;
-        top:50%
-        right:10%;
-    }
     .navbar a {
         padding:5px 10px;
     }
-}
-
-
-.text {
-    position: absolute;
-    top:50%;
-    right:70%;
 }
 
 .price {
@@ -65,7 +57,7 @@
 }
 
 .button {
-    background-color: #74868C;
+    background-color: #556266;
     color:#FFF;
     text-decoration: none;
     padding:5px;
@@ -80,7 +72,7 @@
 footer {
     padding:40px;
     padding-bottom: 60px;
-    background-color:#74868C;
+    background-color:#556266;
     color: #FFF;
 }
 
