--- a/CSS/contact.css
+++ b/CSS/contact.css
@@ -1,5 +1,5 @@
 .navbar {
-    background-color: #74868C;
+    background-color: #556266;
     overflow: hidden;
 }
 .navbar a {
@@ -40,7 +40,7 @@
 .cta {
     position: absolute;
     bottom:35%;
-    background-color: #74868C;
+    background-color: #556266;
     color:#FFF;
     text-decoration: none;
     padding:5px;
@@ -55,7 +55,7 @@ footer {
     width:100%;
     padding:40px;
     padding-bottom: 60px;
-    background-color:#74868C;
+    background-color:#556266;
     color: #FFF;
 }
 
