--- a/CSS/men.css
+++ b/CSS/men.css
@@ -1,5 +1,5 @@
 .navbar {
-    background-color: #74868C;
+    background-color: #556266;
     overflow: hidden;
 }
 .navbar a {
@@ -35,7 +35,7 @@ h1 {
 }
 
 .addtocart {
-    background-color: #74868C;
+    background-color: #556266;
     color:white;
     padding:5px;
     width:80px;
@@ -73,7 +73,7 @@ h1 {
 footer {
     padding:40px;
     padding-bottom: 60px;
-    background-color:#74868C;
+    background-color:#556266;
     color: #FFF;
 }
 
