--- a/CSS/resipt.css
+++ b/CSS/resipt.css
@@ -1,5 +1,5 @@
 .navbar {
-    background-color: #74868C;
+    background-color: #556266;
     overflow: hidden;
 }
 .navbar a {
@@ -19,7 +19,7 @@
 
 .cta {
     color:#FFF;
-    background-color: #74868C;
+    background-color: #556266;
     text-decoration: none;
     border-radius: 5px;
     padding:5px;
@@ -41,7 +41,7 @@ footer {
     width:100%;
     padding:40px;
     padding-bottom: 60px;
-    background-color:#74868C;
+    background-color:#556266;
     color: #FFF;
 }
 
