--- a/CSS/sucsess.css
+++ b/CSS/sucsess.css
@@ -1,5 +1,5 @@
 .navbar {
-    background-color: #74868C;
+    background-color: #556266;
     overflow: hidden;
 }
 
@@ -11,7 +11,7 @@
 
 .cta {
     color:#FFF;
-    background-color: #74868C;
+    background-color: #556266;
     padding:5px;
     border-radius: 5px;
     text-decoration: none;
@@ -42,7 +42,7 @@ footer {
     width:100%;
     padding:40px;
     padding-bottom: 60px;
-    background-color:#74868C;
+    background-color:#556266;
     color: #FFF;
 }
 
