--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,150 +1,150 @@
 nav {
-    background-color: #556266;
-    padding: 5px;
-    display: flex;
-    gap: 1%;
+  background-color: #b27c52;
+  padding: 8px;
+  display: flex;
+  gap: 1%;
 }
 
 nav a {
-    color: white;
-    text-decoration: none;
+  color: white;
+  text-decoration: none;
 }
 
 header {
-    display:flex;
-    justify-content: space-between;
-    padding: 15px;
+  display: flex;
+  justify-content: space-between;
+  padding: 15px;
 }
 
 body {
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif ;
+  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
+    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
 }
 
 h1 {
-    font-family:cursive
+  font-family: cursive;
 }
 
 .mountain {
-    width:300px;
+  width: 300px;
 }
 
 .cart {
-    width: 40px;
-    height:40px
+  width: 40px;
+  height: 40px;
 }
 
 .blurred {
-    width:100%;
-    height:550px;
+  width: 100%;
+  height: 550px;
 }
 
 .big-button {
-    background-color: #556266;
-    color: #FFF;
-    text-decoration: none;
-    width: 150px;
-    padding: 10px;
-    display:flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 5px;
-    font-size: 26px;
+  background-color: #b27c52;
+  color: #fff;
+  text-decoration: none;
+  width: 150px;
+  padding: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 5px;
+  font-size: 26px;
 }
 
 .button {
-    background-color: #556266;
-    color: #FFF;
-    text-decoration: none;
-    padding: 8px;
-    border-radius: 5px;
+  background-color: #b27c52;
+  color: #fff;
+  text-decoration: none;
+  padding: 8px;
+  border-radius: 5px;
 }
 
 .category-container {
-    display: flex;
-    justify-content: space-evenly;
-    padding-top:20px;
+  display: flex;
+  justify-content: space-evenly;
+  padding-top: 20px;
 }
 
 .jacket {
-    width: 300px;
+  width: 300px;
 }
 
 .product-container {
-    display: flex;
-    align-items: center;
-    gap:20px;
+  display: flex;
+  align-items: center;
+  gap: 20px;
 }
 
 .h2 {
-    grid-column: 1/-1;
+  grid-column: 1/-1;
 }
 
-.new-in{
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    column-gap: 5px;
-    row-gap: 60px;
-    padding-bottom: 30px;
+.new-in {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  column-gap: 5px;
+  row-gap: 60px;
+  padding-bottom: 30px;
 }
 
 .space {
-    padding: 10px;
+  padding: 10px;
 }
 
 .content {
-    padding: 100px;
+  padding: 100px;
 }
 
 .total {
-    display: flex;
-    justify-content: space-between;
+  display: flex;
+  justify-content: space-between;
 }
 
-
 footer {
-    background-color: #556266;
-    color: #FFF;
-    padding: 30px;
-    padding-bottom: 60px;
+  background-color: #b27c52;
+  color: #fff;
+  padding: 30px;
+  padding-bottom: 60px;
 }
 
 .mail-phone {
-    display: block;
+  display: block;
 }
 
 footer a {
-    color:#FFF;
-    text-decoration: none;
+  color: #fff;
+  text-decoration: none;
 }
 
-@media(min-width:1212px) {
-    .new-in {
-        grid-template-columns: 1fr 1fr;
-    }
+@media (min-width: 1212px) {
+  .new-in {
+    grid-template-columns: 1fr 1fr;
+  }
 }
 
-@media(max-width:1211px) {
-    .new-in {
-        grid-template-columns: 1fr;
-    }
-    .product-container {
-        display:block;
-    }
-    .navbar {
-        font-size: 10px;
-    }
-    .mountain {
-        width: 100px;
-    }
-    .cart {
-        width: 20px;
-    }
-    .big-button {
-        width:80px;
-        padding:20;
-        font-size: 20px;
-    }
-    .blurred {
-        height:400px;
-    }
+@media (max-width: 1211px) {
+  .new-in {
+    grid-template-columns: 1fr;
+  }
+  .product-container {
+    display: block;
+  }
+  .navbar {
+    font-size: 10px;
+  }
+  .mountain {
+    width: 100px;
+  }
+  .cart {
+    width: 20px;
+  }
+  .big-button {
+    width: 80px;
+    padding: 20;
+    font-size: 20px;
+  }
+  .blurred {
+    height: 400px;
+  }
 }
